# orbitrelay-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: project-roadmap.md
examples/calculator/: README.md
scripts/: check.sh
specs/: HANDOFF_LATEST.md  IMPACT_LATEST.md  TRACEABILITY_LATEST.md  blind-spots.json  execution-status.yaml  release-plan.yaml  state.yaml  traceability-matrix.json
specs/archive/: PR-0.3.0-tool-approval-policies.md  PR-0.4.0-supported-hosted-access.md  RELEASE-0.3.0-tool-approval-policies.md  RELEASE-0.4.0-supported-hosted-access.md
specs/codebase-wiki/: e02s01.md  e02s02.md  e02s03.md  e02s04.md  e02s05.md  e02s06.md  index.md
specs/product/: SCOPE_LATEST.yaml
specs/security/: REVIEW.md
specs/verifications/: AUDIT-e01-e01s01.md  AUDIT-e02-e02s01.md  AUDIT-e02-e02s02.md  AUDIT-e02-e02s03.md  AUDIT-e02-e02s04.md  AUDIT-e02-e02s05.md  AUDIT-e02-e02s06.md  NFR-e01s01.json  NFR-e02s01.json  NFR-e02s02.json  NFR-e02s04.json  NFR-e02s05.json  NFR-e02s06.json  REVIEW-e01s01.md  e01s01-verify.yaml  e02s01-verify.yaml  e02s02-verify.yaml  e02s03-verify.yaml  e02s04-verify.yaml  e02s05-verify.yaml  e02s06-verify.yaml
src/orbitrelay/: __init__.py  agent.py  approval_format.py  approvals.py  auth_cli.py  cli.py  codex_bridge.py  codex_cli.py  config.py  credentials.py  profile_cli.py  profiles.py  (+4 more)
tests/: test_agent.py  test_approvals.py  test_cli.py  test_codex_bridge.py  test_config.py  test_credentials.py  test_profile_cli.py  test_profiles.py  test_redaction.py  test_sandbox.py  test_supergrok_oauth.py  test_tools.py
(+45 files in other folders)
