[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "orbitrelay-agent"
version = "0.3.0"
description = "A coding agent for configurable model endpoints"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ai", "agent", "coding-agent", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "keyring>=25.7.0,<26",
    "openai>=2.45.0",
    "python-dotenv>=1.1.0",
]

[project.scripts]
orbitrelay = "orbitrelay.cli:main"

[project.urls]
Homepage = "https://github.com/TurboT00/orbitrelay-agent"
Repository = "https://github.com/TurboT00/orbitrelay-agent"
Issues = "https://github.com/TurboT00/orbitrelay-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/orbitrelay"]
